--- a/whiteStructs/whiteStructs.csproj
+++ b/whiteStructs/whiteStructs.csproj
@@ -179,6 +179,7 @@
     <Compile Include="Testing\ExcelSequenceFormer.cs" />
     <Compile Include="Testing\PerformanceTesting.cs" />
     <Compile Include="Testing\ResultTesting.cs" />
+    <Compile Include="Conditions\Condition.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -190,6 +191,7 @@
     <ProjectReference Include="..\whiteMath\whiteMath.csproj">
       <Project>{8C8113ED-81C6-413C-B8A3-D8336ACBAAAA}</Project>
       <Name>whiteMath</Name>
+      <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
@@ -200,4 +202,7 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <ItemGroup>
+    <Folder Include="Conditions\" />
+  </ItemGroup>
 </Project>
