--- a/whiteMath/whiteMath.csproj
+++ b/whiteMath/whiteMath.csproj
@@ -378,6 +378,7 @@
     <Compile Include="Combinatorics\Messages.cs" />
     <Compile Include="General\Messages.cs" />
     <Compile Include="RationalNumbers\UnitTests.cs" />
+    <Compile Include="Drawing\ColorPath.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Graphers\Components\GraphicDrawer.resx">
@@ -423,4 +424,10 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <ItemGroup>
+    <ProjectReference Include="..\whiteStructs\whiteStructs.csproj">
+      <Project>{84D6674A-B7A0-49CC-8ECD-0AE03FA63383}</Project>
+      <Name>whiteStructs</Name>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
