--- a/whiteMath/whiteMathTests/whiteMathTests.csproj
+++ b/whiteMath/whiteMathTests/whiteMathTests.csproj
@@ -42,5 +42,11 @@
       <Name>whiteMath</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resources\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\PrimesUpTo10000.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
