--- a/whiteMath/whiteMath.csproj
+++ b/whiteMath/whiteMath.csproj
@@ -324,7 +324,7 @@
     <Compile Include="WhiteMath\Functions\AnalyticFunction\AnalyticFunctionDerivative.cs" />
     <Compile Include="WhiteMath\Functions\AnalyticFunction\AnalyticFunctionHelper.cs" />
     <Compile Include="WhiteMath\Functions\AnalyticFunction\StringExtensions.cs" />
-    <Compile Include="WhiteMath\Functions\FuncFactory.cs" />
+    <Compile Include="WhiteMath\Functions\FunctionFactory.cs" />
     <Compile Include="WhiteMath\Functions\Function.cs" />
     <Compile Include="WhiteMath\Functions\FunctionExceptions.cs" />
     <Compile Include="WhiteMath\Functions\IFunction.cs" />
