--- a/whiteMath/whiteMathTests/whiteMathTests.csproj
+++ b/whiteMath/whiteMathTests/whiteMathTests.csproj
@@ -32,6 +32,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="TestPrimalityTests.cs" />
+    <Compile Include="TestExpressionNodes.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
